2004-12-17 toady <toady@gscore.org>
     
	* SConstruct: Applied patch from Julien Salort for better prefixing <julien.salort ens-lyon fr>
	
2004-12-15 toady <toady@gscore.org>

	Release of 0.0.8: laetmotive.
	We must add few elements, but now, the most important are the plugins.
	
2004-12-14 toady <toady@gscore.org>

	* src/realize_area.c: fixed bug for beams (needs more work though, see far above ;)
	* src/objects.c, src/object_callbacks.c: you can now change the note type from the selection
	
2004-12-07 toady <toady@gscore.org>

	* src/key_event.c: fixed bug #2868 reported by krix, making the horizontal adjustment moving as the keycursor does
	* src/selection.c: fixed the dirty selection... a dirty way
	
2004-12-02 toady <toady@gscore.org>

	* src/plugin.c: fixed a bug which made gscore unable to load more than one plugin :) (a stupid return NULL)
	
2004-11-30 toady <toady@gscore.org>

	Release of 0.0.7: bond.
	Right, we still have bugs, but gscore is usable enough to work with abc music.
	
2004-11-23 toady <toady@gscore.org>

	* glade/gscore.glade, src/spacings.c, src/realize_area.c: applied patch from Alastair Porter <alastair linuxexperience com>
	
2004-11-18 toady <toady@gscore.org>

	* src/draw_barline.[ch]: improve bar spacings, thickness etc.
	
2004-11-12 toady <toady@gscore.org>

	* well, hum -> *.[ch]: I did a lot of things I forgot to write here in the ChangeLog :,( it's almost the release...
	
2004-10-01 toady <toady@gscore.org>

	* src/file.c, src/plugin.[ch]:
	* plugins/abc/export_abc.[ch]: dropped the plugin structure to avoid problems I don't have time to solve for the conference
	
2004-06-07 toady <toady@gscore.org>

	* oops: I forgot about the ChangeLog ;)
	* src/* new datastructure (ahah, again, but now I'm proud of it!)

2004-03-19 toady <toady@gscore.org>

	* src/realize_area.c: fixed a bug which didn't called draw_note at some random time
	
2004-02-17 toady <toady@gscore.org>

	* src/*.[ch]: Improved selection and object spacing
	