@@ -1,3 +1,7 @@
+2004-12-28 toady <toady@gscore.org>
+
+	* src/main.c: reuse of splash screen
+
 2004-12-17 toady <toady@gscore.org>
      
 	* SConstruct: Applied patch from Julien Salort for better prefixing <julien.salort ens-lyon fr>
